--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- cuerpo de la pagina -->
 <body>
     <!-- cabecera -->
-    <header id="inicio">
+    <header >
         <div class="titulo"></div>
         <nav>
             <ul>
@@ -27,7 +27,7 @@
     </header>
 <!-- navegacion -->
 
-<main>
+<main id="inicio">
         <section>
             <div class="img">
                 <h1>Bienvenido a Panachis</h1>
