--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 
         <!-- pie de pagina -->
         <footer id="footer">
-            <h2>&copy; 2025 Panachis. Todos los derechos reservados. <br> Desarrollado por: Nicolas Valenzuela</h2>
+            <h2>&copy; 2025 Panachis. Todos los derechos reservados. <br></h2>
+            <h5>Desarrollado por: <br> <a href="https://github.com/NicolasValanio" target="_blank" rel="noopener noreferrer">Nicolas Valenzuela A.</a></h5>
         </footer>
         
         <script src="main.js"></script>
